--- a/src/renderer/style/base.styl
+++ b/src/renderer/style/base.styl
@@ -18,6 +18,7 @@ body
     color #333333
     min-width 1024px
     min-height 640px
+    user-select none
 a
     color inherit
     box-sizing border-box
